# hydra

./: .travis.yml  CMakeLists.txt  README.md  build_self_test.sh  main.cc  myalgo.cc  myalgo.h  myalgo_test.cc
hydra/: CMakeLists.txt  main.cc
hydra_core/: CMakeLists.txt  hydra_core.cc  hydra_core_test.cc  hydra_service_manager.cc  hydra_service_manager_private.cc  hydra_service_manager_private.h  hydra_service_manager_test.cc
hydra_core/internal/: CMakeLists.txt  hydra_json.cc  hydra_json.h  hydra_service_manager_private.h
hydra_osdeps/: CMakeLists.txt  hydra_fileio.cc  hydra_loader.cc  hydra_osdeps.cc  hydra_osdeps_test.cc
include/hydra/: hydra-core.h  hydra_base.h  hydra_core.h  hydra_service.h
include_private/hydra/: hydra_core.h  hydra_osdeps.h
